[gd_scene load_steps=7 format=2]

[ext_resource path="res://game/rest/Rest.gd" type="Script" id=1]
[ext_resource path="res://assets/fonts/font-data/font-style.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://game/rest/RestRecipe.tscn" type="PackedScene" id=3]
[ext_resource path="res://assets/images/background/rest.jpg" type="Texture" id=4]
[ext_resource path="res://assets/themes/general_theme/general_theme.tres" type="Theme" id=5]

[sub_resource type="DynamicFont" id=1]
size = 95
outline_size = 9
outline_color = Color( 0, 0, 0, 1 )
use_mipmaps = true
use_filter = true
font_data = ExtResource( 2 )

[node name="Rest" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 5 )
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="TextureRect" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Recipes" type="ScrollContainer" parent="."]
visible = false
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -627.401
margin_top = -383.093
margin_right = 1272.6
margin_bottom = 708.907
grow_horizontal = 2
grow_vertical = 2
rect_scale = Vector2( 0.8, 0.8 )
theme = ExtResource( 5 )
scroll_vertical_enabled = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HBox" type="HBoxContainer" parent="Recipes"]
margin_right = 3120.0
margin_bottom = 1080.0
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RestRecipe" parent="Recipes/HBox" instance=ExtResource( 3 )]
margin_bottom = 1080.0

[node name="RestRecipe2" parent="Recipes/HBox" instance=ExtResource( 3 )]
margin_left = 630.0
margin_right = 1230.0
margin_bottom = 1080.0

[node name="RestRecipe3" parent="Recipes/HBox" instance=ExtResource( 3 )]
margin_left = 1260.0
margin_right = 1860.0
margin_bottom = 1080.0

[node name="RestRecipe4" parent="Recipes/HBox" instance=ExtResource( 3 )]
margin_left = 1890.0
margin_right = 2490.0
margin_bottom = 1080.0

[node name="RestRecipe5" parent="Recipes/HBox" instance=ExtResource( 3 )]
margin_left = 2520.0
margin_right = 3120.0
margin_bottom = 1080.0

[node name="BackButton" type="Button" parent="."]
margin_left = 60.0
margin_top = 900.0
margin_right = 271.0
margin_bottom = 1046.0
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ContinueButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -25.3217
margin_top = -240.793
margin_right = 348.678
margin_bottom = -94.7927
text = "CONTINUE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ButtonContainer" type="VBoxContainer" parent="."]
margin_left = 473.73
margin_top = 423.333
margin_right = 1565.73
margin_bottom = 745.333
grow_horizontal = 2
grow_vertical = 2
custom_constants/separation = 30
alignment = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HealButton" type="Button" parent="ButtonContainer"]
margin_right = 1092.0
margin_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 150 )
text = "HEAL_TEXT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HintButton" type="Button" parent="ButtonContainer"]
margin_top = 180.0
margin_right = 1092.0
margin_bottom = 330.0
grow_horizontal = 2
grow_vertical = 2
rect_min_size = Vector2( 0, 150 )
text = "DISCOVER_RECIPE"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ChooseOneLabel" type="Label" parent="."]
anchor_right = 1.0
margin_top = 250.0
margin_bottom = 392.0
custom_fonts/font = SubResource( 1 )
text = "CHOOSE_ONLY_ONE"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Warning" type="ColorRect" parent="."]
margin_left = 1403.76
margin_top = 234.905
margin_right = 1893.76
margin_bottom = 394.905
color = Color( 0, 0, 0, 0.705882 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Warning"]
anchor_right = 1.0
margin_right = 3.05176e-05
margin_bottom = 160.0
text = "Cant heal because of X"
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="WarningTween" type="Tween" parent="Warning"]

[connection signal="pressed" from="BackButton" to="." method="_on_BackButton_pressed"]
[connection signal="pressed" from="ContinueButton" to="." method="_on_ContinueButton_pressed"]
[connection signal="pressed" from="ButtonContainer/HealButton" to="." method="_on_HealButton_pressed"]
[connection signal="pressed" from="ButtonContainer/HintButton" to="." method="_on_HintButton_pressed"]
